Method List.of() in VideoResultServiceImpl was changed for Java 8